# ML-Act2

./: .gitignore  actividad1.ipynb  pipeline_demo-0.1.0-py3-none-any.whl
Actividad1/: actividad1.html  actividad1.ipynb  pipeline.py  pipeline_demo-0.1.0-py3-none-any.whl  pipeline_demo.html
Pipeline/: MANIFEST.in  README.md  environment.yml  pipeline.html  pipeline.ipynb  pipeline_example.py  pyproject.toml  requirements-conda.txt  requirements-dev.txt  synthetic_customers.csv
Pipeline/src/pipeline_demo/: __init__.py  pipeline.py  viz.py
Pipeline/src/pipeline_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Pipeline/src/pipeline_demo/data/: synthetic_customers.csv
